:sparkles: feat(all): addnew  alpha v

--- a/docs/todo/v1.md
+++ b/docs/todo/v1.md
@@ -13,19 +13,19 @@
 - [ ] Una funcion que construya el squema a partir de una clippium data
 Example:
 ```
-clippium-tools create schema ./clippium-data.js -o ./dist/schema.json
+clippium-toolkit create schema ./clippium-data.js -o ./dist/schema.json
 ```
 
 - [ ] Una funcion que construya la clippium data a partir de un squema
 Example:
 ```
-clippium-tools create data ./schema.json -o ./src/data.ts
+clippium-toolkit create data ./schema.json -o ./src/data.ts
 ```
 
 - [ ] Una funcion que construya la clippium data a partir de un tipo typescript y lo exporta en un archivo separado .ts|js
 Example:
 ```
-clippium-tools create data ./types.ts --type MyType -o ./src/data.ts
+clippium-toolkit create data ./types.ts --type MyType -o ./src/data.ts
 ```
 Output:
 ```js
@@ -46,18 +46,20 @@ Output:
 
 ### RUNTIME UTILS
 
-> NOTE: intentar compatibilidad con web/node y demas runtimes
+> NOTE: Try compatibility with web/node and other runtimes
 
 #### Libs
 
-- [x] Color: Una funcion para añadir color 
-- [x] Updater: Una funcion para notificar de actualizacion del paquete
-- [x] i18n: Una funcion de traduccion
+- [x] Color: A function to add color
+- [x] Updater: A function to notify about package updates
+- [x] i18n: A translation function
 
-### Configurtion
+### Configuration
 
-- [ ] Una configuracion para poner color al output de clippium
-- [ ] Una configuracion donde se definen las opciones basicas de clippium como help, version, etc
-- [ ] Una configuracion donde acepte poner al usuario la configuracion de los comandos en un json|yaml|toml|js|ts
-- [ ] Una configuracion donde acepte poner al usuario la configuracion de los comandos en el package.json de la app con el nombre del comando como key
+- [x] A configuration to enable color output in Clippium
+- [x] A configuration where basic Clippium options like help, version, etc. are defined
+- [x] A configuration that allows the user to provide command configurations via json|yaml|toml|js|ts
+- [x] A configuration that allows the user to place command configurations inside the app's package.json using the command name as the key
+
+
 
