:sparkles: feat(all): up version

--- a/docs/todo/v1.md
+++ b/docs/todo/v1.md
@@ -11,7 +11,8 @@
 - [x] A feat that builds the **schema** from Clippium data
 - [x] A feat that builds the **Clippium data** from a schema
 - [x] A feat that builds the **Clippium data** from a TypeScript type and exports it in a separate `.ts` or `.js` file
-- [ ] Add documentation command
+- [ ] Add **documentation** command
+- [ ] Add **init** command
 
 ## RUNTIME UTILS
 
