:sparkles: feat(all): up to 1v

--- a/docs/todo/v1.md
+++ b/docs/todo/v1.md
@@ -4,15 +4,16 @@
 
 ## ☀️ CORE
 
-- [ ] Finish data validator
+- [x] Finish data validator
 
 ## 🧰 TOOLKIT
 
 - [x] A feat that builds the **schema** from Clippium data
 - [x] A feat that builds the **Clippium data** from a schema
 - [x] A feat that builds the **Clippium data** from a TypeScript type and exports it in a separate `.ts` or `.js` file
-- [ ] Add **documentation** command
-- [ ] Add **init** command
+- [x] Add **documentation** command
+- [x] Add **init** command
+- [ ] add **add** command
 
 ## RUNTIME UTILS
 
